hphp/hack/test/typecheck/errors/4332-newtype_alias_mismatch.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

newtype Foo as int = string;
